refactor(domain): updated class name and package organization
