# hangman-api/src/main/java/cna/apps/hangman/api/GameHolder.java
@@ -2,11 +2,18 @@ package cna.apps.hangman.api;
 
 import java.util.UUID;
 
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import cna.apps.hangman.api.GameState.StateEnum;
+
 public class GameHolder {
 
-  private String gameId;
+  private final String gameId;
 
-  public GameHolder() {
+  private final Game game;
+  
+  public GameHolder(Game game) {
+    this.game = game;
     gameId = UUID.randomUUID().toString();
   }
 
@@ -19,6 +26,15 @@ public class GameHolder {
   }
   
   public GetGameResponse computeGetGameResponse() {
-    return new GetGameResponse();
+    GetGameResponse getGameResponse = new GetGameResponse();
+    GameState gameState = new GameState();
+    gameState.setState(StateEnum.INPROGRESS);
+    Hangman hangman = new Hangman();
+    hangman.remainingTries(7);
+    gameState.hangman(hangman);
+    gameState.wordMask(game.getMask());
+    getGameResponse.setGameState(gameState);
+    getGameResponse.setUrlToSuggestLetter(ServletUriComponentsBuilder.fromCurrentRequest().build().toUri());
+    return getGameResponse;
   }
 }
